--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "devDependencies": {
     "@glimmer/application": "^0.4.0",
     "@glimmer/application-pipeline": "^0.5.2",
-    "@glimmer/component": "^0.3.8",
+    "@glimmer/component": "^0.3.9",
     "@glimmer/resolver": "^0.3.0",
-    "ember-cli": "2.12.1",
+    "ember-cli": "github:ember-cli/ember-cli",
     "ember-cli-inject-live-reload": "^1.6.1",
     "typescript": "^2.2.2"
   },
