--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   },
   "devDependencies": {
     "@glimmer/application": "^0.4.0",
-    "@glimmer/application-pipeline": "^0.5.2",
-    "@glimmer/component": "^0.3.9",
+    "@glimmer/application-pipeline": "^0.6.0-beta.2",
+    "@glimmer/blueprint": "^0.1.12",
+    "@glimmer/component": "^0.3.8",
     "@glimmer/resolver": "^0.3.0",
+    "broccoli-asset-rev": "^2.5.0",
     "ember-cli": "github:ember-cli/ember-cli",
     "ember-cli-inject-live-reload": "^1.6.1",
+    "ember-cli-uglify": "^1.2.0",
     "typescript": "^2.2.2"
   },
   "engines": {
