--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "@glimmer/component": "^0.3.8",
     "@glimmer/resolver": "^0.3.0",
     "broccoli-asset-rev": "^2.5.0",
+    "clipboard": "^1.6.1",
     "ember-cli": "github:ember-cli/ember-cli",
     "ember-cli-inject-live-reload": "^1.6.1",
     "ember-cli-uglify": "^1.2.0",
+    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rxjs": "^5.3.0",
     "typescript": "^2.2.2"
   },
   "engines": {
