--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
     "inlineSourceMap": true,
     "inlineSources": true,
     "moduleResolution": "node",
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "strictNullChecks": true,
+    "noImplicitAny": true
   },
   "exclude": [
     "node_modules",
