--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "ember build",
-    "start": "ember server",
+    "start": "ember server --proxy=http://localhost:3000/",
     "test": "ember test"
   },
   "devDependencies": {
