--- a/package.json
+++ b/package.json
@@ -20,13 +20,17 @@
     "broccoli-asset-rev": "^2.5.0",
     "broccoli-funnel": "^1.2.0",
     "broccoli-merge-trees": "^2.0.0",
+    "cssnano": "^3.10.0",
     "ember-cli": "github:ember-cli/ember-cli",
     "ember-cli-inject-live-reload": "^1.6.1",
+    "ember-cli-postcss": "^3.2.0",
+    "ember-cli-sass": "^6.1.3",
     "ember-cli-uglify": "^1.2.0",
     "jszip": "^3.1.3",
+    "postcss-cssnext": "^2.10.0",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
-    "typescript": "^2.2.2"
+    "typescript": "^2.3.1"
   },
   "engines": {
     "node": ">= 4.0"
