--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "@glimmer/blueprint": "^0.2.1",
     "@glimmer/component": "^0.3.10",
     "@glimmer/resolver": "^0.3.0",
+    "autoprefixer": "^7.1.0",
     "broccoli-asset-rev": "^2.5.0",
     "broccoli-funnel": "^1.2.0",
     "broccoli-merge-trees": "^2.0.0",
+    "cssnano": "^3.10.0",
     "ember-cli": "github:ember-cli/ember-cli",
     "ember-cli-inject-live-reload": "^1.6.1",
+    "ember-cli-postcss": "^3.3.0",
+    "ember-cli-sass": "^6.1.3",
     "ember-cli-uglify": "^1.2.0",
     "jszip": "^3.1.3",
     "rollup-plugin-commonjs": "^8.0.2",
