--- a/package.json
+++ b/package.json
@@ -7,26 +7,31 @@
     "test": "tests"
   },
   "scripts": {
-    "build": "ember build",
+    "build": "ember build -e production",
     "start": "ember server --proxy=http://localhost:3000/",
     "test": "ember test"
   },
   "devDependencies": {
-    "@glimmer/application": "^0.4.0",
-    "@glimmer/application-pipeline": "^0.6.9",
-    "@glimmer/blueprint": "^0.2.1",
-    "@glimmer/component": "^0.3.10",
+    "@glimmer/application": "^0.7.2",
+    "@glimmer/application-pipeline": "^0.8.0",
+    "@glimmer/blueprint": "^0.5.0",
+    "@glimmer/inline-precompile": "^1.0.0",
     "@glimmer/resolver": "^0.3.0",
+    "@glimmer/test-helpers": "^0.30.0",
+    "@types/qunit": "^2.0.31",
     "broccoli-asset-rev": "^2.5.0",
     "broccoli-funnel": "^1.2.0",
     "broccoli-merge-trees": "^2.0.0",
-    "ember-cli": "github:ember-cli/ember-cli",
+    "ember-cli": "^2.15.1",
+    "ember-cli-dependency-checker": "^2.0.1",
     "ember-cli-inject-live-reload": "^1.6.1",
-    "ember-cli-uglify": "^1.2.0",
+    "ember-cli-sass": "^6.2.0",
+    "ember-cli-uglify": "^2.0.0-beta.1",
     "jszip": "^3.1.3",
+    "qunitjs": "^2.3.3",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
-    "typescript": "^2.3.2"
+    "typescript": "^2.5.0"
   },
   "engines": {
     "node": ">= 4.0"
