--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
     "test": "tests"
   },
   "scripts": {
-    "build": "ember build -e production",
+    "build": "ember build -prod",
     "start": "ember server --proxy=http://localhost:3000/",
     "test": "ember test"
   },
   "devDependencies": {
-    "@glimmer/application": "^0.7.2",
-    "@glimmer/application-pipeline": "^0.8.0",
-    "@glimmer/blueprint": "^0.5.0",
+    "@glimmer/application": "^0.8.0",
+    "@glimmer/application-pipeline": "^0.9.0",
+    "@glimmer/blueprint": "~0.6.4",
+    "@glimmer/component": "^0.8.0",
     "@glimmer/inline-precompile": "^1.0.0",
-    "@glimmer/resolver": "^0.3.0",
+    "@glimmer/resolver": "^0.4.1",
     "@glimmer/test-helpers": "^0.30.0",
     "@types/qunit": "^2.0.31",
     "broccoli-asset-rev": "^2.5.0",
@@ -26,6 +27,7 @@
     "ember-cli-dependency-checker": "^2.0.1",
     "ember-cli-inject-live-reload": "^1.6.1",
     "ember-cli-sass": "^6.2.0",
+    "ember-cli-tslint": "^0.1.3",
     "ember-cli-uglify": "^2.0.0-beta.1",
     "jszip": "^3.1.3",
     "qunitjs": "^2.3.3",
